[package]
name = "igo-wasm-demo"
version = "0.1.0"
authors = ["yasuhara <yasuhara@gmail.com>"]
readme = "README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://bitbucket.org/igo-wasm-demo/igo-rs"
description = "igo-rs WebAssembly Demo"
exclude = [
  "*.iml",
  "www/*",
  "pkg/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
brotli-decompressor = "2.3"
igo-rs = { path = "../igo-rs" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
